<resources>
    <string name="app_name">ParisHotspot</string>
    <string name="googleapi">Voir sur une carte</string>
    <string name="district_label">Quartier :&#160;</string>
    <string name="address_label">Adresse :&#160;</string>

    <string name="search_hint">Rechercher (libellé, adresse)</string>
    <string name="app_label">Barre de recherche</string>

    <string name="search_title">Rechercher</string>
    <string name="refresh_title">Rafraîchir</string>
    <string name="info_title">Information</string>
    <string name="share_title">Partager</string>

    <string name="student1">Philippe ENG (eng_p)</string>
    <string name="student2">Fantin VERPILLOT (verpil_f)</string>

    <string name="share_with_label">Partager via</string>
    <string name="authors">Auteurs :</string>
</resources>
