<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epita.parishotspot.InfoActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/authors"
        android:textSize="30sp"
        android:text="@string/authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/student1"
        android:textSize="22sp"
        android:text="@string/student1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/authors"
        />

    <TextView
        android:id="@+id/student2"
        android:textSize="22sp"
        android:text="@string/student2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student1"
        android:layout_marginLeft="10dp"
        />

</RelativeLayout>
