<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epita.parishotspot.DetailActivity">

    <TextView
        android:id="@+id/name"
        android:textSize="36sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/code"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginBottom="5dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/code"
        />

    <TextView
        android:id="@+id/address_label"
        android:text="@string/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/address"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/address_label"
        android:layout_toEndOf="@+id/address_label" />

    <TextView
        android:id="@+id/district_label"
        android:text="@string/district_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/address"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/district"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_alignLeft="@+id/address"
        android:layout_alignStart="@+id/address"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/district"
        />

    <Button
        android:id="@+id/map_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/googleapi"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
